Resolves: tdf#92148 SmElementsControl invalidates itself from paint endlessly

Change-Id: Id9cd7fbe9e433005cc27b2e8e3417a5e289b94e3
(cherry picked from commit b1760dc3320bfb44568243359124d2615e69e18d)
Reviewed-on: https://gerrit.libreoffice.org/17302
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>